--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
-.App {
-  text-align: center;
+:root {
+  --dgray : #24292E;
+  --sgray : #3F4448;
+  --bgray : #FAFBFC;
+  --borderColor : #E1E1E2;
+  --blue : #0366D6;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar-container {
+  height: 60px;
+  background-color: var(--dgray);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar-container img {
+  width: 35px;
+  height: 35px;
+}
+
+.link {
+  text-decoration: none;
+  color: #fff;
+  padding: 0 20px;
+}
+
+.search {
+  margin-left: 20px;
+  height: 30px;
+  width: 280px;
+  background-color: var(--sgray);
+  border: none;
+  color: #fff;
+  outline: none;
+  padding-left: 10px;
+}
+
+.banner-container {
+  height: 200px;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: var(--bgray);
+  border: 1px solid var(--borderColor);
+  line-height: 0.3;
 }
 
-.App-link {
-  color: #61dafb;
+.banner-container p:nth-child(1) {
+  font-size: 35px;
+  font-weight: 600;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.repos {
+  width: 60%;
+  margin: 50px auto;
+}
+
+.repo-item-container {
+  border: 1px solid var(--borderColor);
+  padding-left: 30px;
+  list-style: none;
+  margin-left: -40px;
+}
+
+.repo-item-container h3 {
+  color: var(--blue);
+}
+
+.repos-lower-container {
+  display:  flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.repos-lower-container img {
+  height: 20px;
+  height: 20px;
+  margin-left: 30px;
+  margin-right: 5px;
+}
+
+.search-btn {
+  height: 30px;
+  width: 30px;
+  outline: none;
+  background-color: var(--sgray);
+  border: none;
+  margin-left: 2px;
+  cursor: pointer;
+}
+
+.search-btn img {
+  height: 18px;
+  width: 18px;
+}
+
+
+.repos ul {
+  margin-left: 0;
+}
+
+.repos button {
+  cursor: pointer;
+  outline: none;
+}
+
+.repos button:nth-child(1){
+  background-color: var(--blue);
+  border: none;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  margin-left: 30px;
+  padding: 10px 20px;
+  color: #fff;
+}
+
+.repos button:nth-child(2){
+  background-color: inherit;
+  border: 1px solid var(--borderColor);
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  padding: 10px 20px;
+}
+
+.filter-container {
+  background-color: var(--bgray);
+  padding: 20px 10px;
+  border: 1px solid var(--borderColor);
+  margin-bottom: -17px;
 }
